--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="startScan">Start Bluetooth Scan</button>
+    <button id="startScan">Start Drone-Detection Scan</button>
     <div id="output"></div>
     <script src="app.js"></script>
 </body>
